@@ -1,3 +1,8 @@
+2007-11-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff-load.c (run): properly handle a failure of
+	TIFFFdOpen() instead of crashing on TIFF files we can't handle.
+
 2007-11-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_new): don't
